--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=host;Database=db;Username=name;Password=pwd"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
