Добавил вверстку и логику регистрации
Не работает только связь с бд, пока пытаюсь настроить.
Логин пока работает как список пользователей (правда он не работает вообще)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=host;Database=db;Username=name;Password=pwd"
+    //"DefaultConnection": "Host=host;Database=db;Username=name;Password=pwd",
+    "DefaultConnection": "Server=localhost;Database=TestDB;Password=password;Trusted_Connection=True;'MultipleActiveResultSets=True'"
   },
 
   "Logging": {
